--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -24,7 +24,7 @@
         </div>
         <div class="form-row">
             <div class="form-group col-md-6 mx-auto">
-                <label for="inputPassword">Password</label>
+                <label for="inputPassword">Mot de passe</label>
                 <input type="password" name="password" id="inputPassword" class="form-control" required>
             </div>
         </div>
